2011-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	More support for upTeX and e-upTeX.  Updates from W32TeX.
	* ptexenc.c, ptexenc/ptexenc.h: Add is_internalEUC(),
	is_internalUPTEX(), ismultichr(), ismultichr(), toDVI(), and
	fromDVI().
	No nkf_disable(), nkf_open(), and nkf_close() for WIN32.

	* ptexenc/unicode.h, unicode.c: Add UCStoUPTEX(), UPTEXtoUCS().

	* ptexenc/kanjicnv.h, ptexenc/ptexenc.h, ptexenc/unicode.h:
	Use prototypes as in ptexenc/ from W32TeX.

	* ptexenc.c: Handle default encoding with/without uptex.
	* configure.ac: Remove option '--with-ptexenc-enc' configure.

2011-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.2.0 => 1.3.0dev.
	* ptexenc.c, ptexenc/ptexenc.h: Add sjisterminal,
	infile_enc_auto, and enable_UPTEX().

	Renamed ChangeLog => ChangeLog.jp, ChangeLog.TL => ChangeLog.
	* Makefile.am (EXTRA_DIST): Adapted.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Add support for upTeX and e-upTeX.
	* ptexenc/ptexenc.h, ptexenc.c: Export fromUCS().

2011-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: New file defining the ptexenc version.
	* configure.ac: Adapt. Use KPSE_LT_VERSION.

2011-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	For e-pTeX, adapted from eptex-110102.tar.xz by Hironori Kitagawa.
	* ptexenc.c, ptexenc/ptexenc.h: Export toUCS().
	* ptexenc/unicode.h: Export UCStoUTF8().
	* ptexenc.c: Change version string "ptetex" => "ptexenc".
	* Makefile.am: Install ptexenc/unicode.h.

	* configure.ac: Version 1.2.0.

2010-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (libptexenc_la_LDFLAGS): Add -no-undefined.

2010-06-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (libptexenc_la_CPPFLAGS): Define MAKE_PTENC_DLL
	instead of MAKE_KPSE_DLL.
	(libptexenc_la_SOURCES, nobase_include_HEADERS): Do not install
	kanjicnv.h, unicode-jp.h, and unicode.h.
	* ptexenc/ptexenc.h: Define and use PTENCDLL instead of KPSEDLL.